--- a/simple_manifest.json
+++ b/simple_manifest.json
@@ -23,17 +23,25 @@
               "type": "Annotation",
               "motivation": "painting",
               "body": {
-                "id": "http://iiif.io/api/presentation/2.1/example/fixtures/resources/page1-full.png",
+                "id": "https://rae-drt.github.io/PROB11IF/Images/42c4d1ed42757f7dcb05d8c16e0c0e56.png",
                 "type": "Image",
                 "format": "image/png",
-                "height": 1800,
-                "width": 1200
+                "height": 2556,
+                "width": 1840
               },
               "target": "https://iiif.io/api/cookbook/recipe/0001-mvm-image/canvas/p1"
             }
           ]
         }
+      ],
+      "annotations": [
+        {
+          "id": "https://raw.githubusercontent.com/rae-drt/PROB11IF/refs/heads/main/line_annotation_example.json",
+          "type": "AnnotationPage",
+          "label": {"en":["Text of page  -"]}
+        }
       ]
+    },
     }
   ]
 }
