--- a/simple_manifest.json
+++ b/simple_manifest.json
@@ -29,7 +29,7 @@
                 "height": 2556,
                 "width": 1840
               },
-              "target": "https://iiif.io/api/cookbook/recipe/0001-mvm-image/canvas/p1"
+              "target": "https://rae-drt.github.io/PROB11IF/Images/42c4d1ed42757f7dcb05d8c16e0c0e56.png"
             }
           ]
         }
